# fogo-yield

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml  cranker-image.yml
assets/: metadata.json  paymaster.toml
deploy/cranker/: Dockerfile  cranker.env.example
deploy/cranker/prometheus/: rules.yml
docs/: PRE_DEPLOY_CHECKLIST.md  SECURITY_MODEL.md  WITHDRAW_REDESIGN.md  architecture.md  cranker-runbook.md  deploy-checklist.md  deploy-mainnet.md  fogo-domain-registry-request.md  fogo-onre.md  intent-fork-replay-argument.md  security.md
docs/superpowers/plans/: 2026-05-09-webapp-shadcn-refactor.md
docs/superpowers/specs/: 2026-05-09-webapp-antd-refactor-design.md  2026-05-09-webapp-shadcn-refactor-design.md
programs/intent-transfer/: Cargo.toml  README.md
programs/intent-transfer/src/: error.rs  fees.rs  lib.rs  nonce.rs  session_token.rs  verify.rs
programs/intent-transfer/src/bridge/: be.rs  message.rs  mod.rs
programs/intent-transfer/src/bridge/cpi/: mod.rs  ntt_manager.rs  ntt_with_executor.rs
programs/intent-transfer/src/bridge/processor/: bridge_ntt_tokens.rs  mod.rs
programs/intent-transfer/src/config/: access_control.rs  mod.rs
programs/intent-transfer/src/config/processor/: mod.rs  register_fee_config.rs  register_ntt_config.rs  update_fee_config.rs
programs/intent-transfer/src/config/state/: fee_config.rs  mod.rs  ntt_config.rs
programs/intent-transfer/src/intrachain/: message.rs  mod.rs
programs/intent-transfer/src/intrachain/processor/: mod.rs  send_native.rs  send_tokens.rs
programs/relayer/: Cargo.toml
programs/relayer/src/: constants.rs  cpi.rs  error.rs  events.rs  lib.rs  ntt.rs  onre.rs  state.rs  vaa.rs
programs/relayer/src/instructions/: accept_authority.rs  admin.rs  bootstrap.rs  cancel_flow.rs  cancel_redemption_onyc.rs  claim_redemption_usdc.rs  claim_usdc.rs  configure.rs  initialize.rs  lock_onyc.rs  mod.rs  receive.rs  refund.rs  request_redemption_onyc.rs  send.rs  send_usdc_to_user.rs  swap.rs  swap_onyc_to_usdc.rs  swap_usdc_to_onyc.rs  sweep.rs  unlock_onyc.rs  update_fees.rs  withdraw_fees.rs
scripts/: add-fork-to-domain.mjs  cliff.toml  create-fee-vault-child-ata.mjs  deploy-fogo-deposit-lut.mjs  deploy-fogo-redeem-lut.mjs  extend-fogo-deposit-lut.mjs  fix-onyc-fee.mjs  generate-clients.mts  inspect-onyc-ntt-fogo.mjs  inspect-stuck-flow.ts  intent-fork.expected.diff  register-intent-fork-config.mjs  release-fogo-outbound.mjs  release-stuck-usdc-outbox.mjs  verify-intent-fork.sh
tests/: admin-rotation.test.ts  cancel-redemption-onyc-e2e.test.ts  deposit-flow-e2e.test.ts  fogo-redeem-intent.test.ts  gateway-pda-derivations.test.ts  initialize-admin.test.ts  intent-setter-delegate-auth.test.ts  intent-setter-pda.test.ts  intent-setter-session-auth.test.ts  intent-transfer-fork.test.ts  lock-onyc-e2e.test.ts  multi-pair-isolation.test.ts  receive-min-out.test.ts  refund.test.ts  relayer.test.ts  sdk-initialize-pair.test.ts  sdk-min-out-memo.test.ts  sdk-min-out.test.ts  sdk-ntt-managers.test.ts  sdk-ntt-release.test.ts  sdk-onre-nav.test.ts  sdk-pda-min-out.test.ts  sdk-pricing.test.ts  sdk-utils-meta.test.ts  sdk-wallet-min-out.test.ts  send-usdc-to-user-e2e.test.ts  swap-min-out.test.ts  swap-negative.test.ts  swap-onyc-to-usdc-e2e.test.ts  unlock-onyc-e2e.test.ts  withdraw-counter-nonzero.test.ts  withdraw-failure-paths.test.ts  withdraw-flow-e2e.test.ts
tests/fixtures/programs/evil_router/: Cargo.toml  keypair.json
tests/fixtures/programs/evil_router/src/: lib.rs
tests/fixtures/programs/intent_setter_harness/: Cargo.toml
tests/fixtures/programs/intent_setter_harness/src/: lib.rs
tests/utils/: errors.ts  fixture-loader.ts  index.ts  mint.ts  mock-accounts.ts  ntt-accounts.ts  onre-accounts.ts  onre-fixtures.ts  svm.ts  withdraw-scaffolding.ts
