[workspace]
members = ["programs/relayer"]
resolver = "2"

[workspace.package]
authors = ["Poitgroup Team"]
repository = "https://github.com/pointgroup-labs/fogo-rwa"
readme = "./README.md"
edition = "2024"

[workspace.dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token", "associated_token"] }
anyhow = "1"

[workspace.lints.clippy]
all = "warn"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
