[workspace]
members = ["programs/*"]
# Vendored ID-only fork; own workspace root + upstream anchor 0.31.1
# toolchain/profile. Must NOT inherit this repo's hardened profile.
exclude = ["programs/intent-transfer"]
resolver = "2"

[workspace.package]
authors = ["Poitgroup Team"]
repository = "https://github.com/pointgroup-labs/fogo-onre"
readme = "./README.md"
edition = "2021"

[workspace.dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }
anyhow = "1"

[workspace.lints.clippy]
all = "warn"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
