[package]
name = "fogo-onre-relayer"
version = "0.1.4"
description = "Fogo OnRe relayer — stateless PDA-custody bridge between OnRe and Wormhole NTT on Solana"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "fogo_onre_relayer"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-keccak-hasher = "3.1"

[dev-dependencies]
# Test-only: used by the discriminator-derivation guard in `state.rs` to
# recompute `sha256("global:<ix_name>")[..8]` and assert it matches the
# on-chain constants. Not a runtime dep — keeps the deployed program lean.
solana-sha256-hasher = "3.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(feature, values("anchor-debug", "no-entrypoint", "no-log-ix-name", "cpi", "custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
]

[lints.clippy]
all = "warn"
