[package]
name = "fogo-ntt-relayer"
version = "0.2.0"
description = "Cross-chain Wormhole NTT relayer with stateless PDA custody"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "fogo_ntt_relayer"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-security-txt = { workspace = true }
solana-keccak-hasher = "3.1"

[dev-dependencies]
solana-sha256-hasher = "3.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(feature, values("anchor-debug", "no-entrypoint", "no-log-ix-name", "cpi", "custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
]

[lints.clippy]
all = "warn"
